--- a/views/index.html
+++ b/views/index.html
@@ -1,153 +1,191 @@
-<!-- 
- index.html - Ethereum Wallet
- Author : Soto Jang (sotolabedu@gmail.com)
- Copyright (c) Sunstar Since 2015. All Rights Reserved. See LICENSE file.
- -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Next Level HTML CSS Template</title>
+<!--
+Next Level CSS Template
+https://templatemo.com/tm-532-next-level
+-->
+    <link rel="stylesheet"  href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/templatemo-style.css" />
+  </head>
+  <body>
+    <div class="container-fluid">
+      <div class="row tm-brand-row">
+        <div class="col-lg-4 col-10">
+          <div class="tm-brand-container">
+            <div class="tm-brand-texts">
+              <h1 class="text-uppercase tm-brand-name"> Hello </h1>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-8 col-2 tm-nav-col">
+          <div class="tm-nav">
+            <nav class="navbar navbar-expand-lg navbar-light tm-navbar">
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto mr-0">
+                  <li class="nav-item active">
+                    <div class="tm-nav-link-highlight"></div>
+                    <a class="nav-link" href="#"
+                      >Home <span class="sr-only">(current)</span></a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <div class="tm-nav-link-highlight"></div>
+                    <a class="nav-link" href="about.html">About me</a>
+                  </li>
+                  <li class="nav-item">
+                    <div class="tm-nav-link-highlight"></div>
+                    <a class="nav-link" href="gallery.html">Daily</a>
+                  </li>
+                  <li class="nav-item">
+                    <div class="tm-nav-link-highlight"></div>
+                    <a class="nav-link" href="contact.html">record</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
+        </div>
+      </div>
 
-<!Doctype html>
-<html>
+      <div class="row tm-welcome-row">
+        <div class="col-12 tm-page-cols-container">
+          <div class="tm-page-col-left tm-welcome-box tm-bg-primary">
+            <p class="tm-welcome-text">
+              <em>"Hello, this is a clean layout. left side is the text and right
+                side is a parallax image."</em>
+            </p>
+          </div>
+          <div class="tm-page-col-right">
+            <div
+              class="tm-welcome-parallax"
+              data-parallax="scroll"
+              data-image-src="img/blue-contem-girl.jpg"
+            ></div>
+          </div>
+        </div>
+      </div>
 
-<head>
-	<meta charset="UTF-8">
+      <section class="row tm-pt-4 tm-pb-6">
+        <div class="col-12 tm-page-cols-container">
+          <div class="tm-page-col-right">
+            <h2 class="tm-text-secondary tm-mb-5">
+              Nunc tristique velit ut semper
+            </h2>
+            <p class="tm-mb-6">
+              Homepage main photo is provided by <strong>Moose Photos</strong> from <strong>Pexels</strong>. Next Level CSS Template is brought to you by Template Mo website. You can feel free to adapt it for your websites. No need to put a footer credit link. Please kindly spread a word about us. Thank you. If you have any question, feel free to contact us on Facebook page.
+              
+            </p>
+            <p class="mb-0">
+           	  Nullam nec dictum dolor. Sed ultricies purus nec suscipit vulputate. Fusce a massa eu orci
+              vulputate varius. Praesent id felis ac erat elementum condimentum. Pellentesque a
+              libero vitae nisi vestibulum tempor vitae vitae nulla. Praesent ut
+              eleifend ligula, nec pretium erat.
+            </p>
+          </div>
+        </div>
+      </section>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script type="text/javascript" src="./js/web3.min.js"></script>
-	<script type="text/javascript" src="./js/ethereumjs-tx-1.3.3.min.js"></script>
-	<script src="http://code.jquery.com/jquery-latest.js "></script>
-	<script type="text/javascript" src="./js/qrcode.js"></script>
+      <div class="tm-page-col-right">
+        <div class="row tm-pt-7 tm-pb-6">
+          <div class="col-md-6 tm-home-section-2-left">
+            <div
+              class="img-fluid tm-mb-4 tm-small-parallax"
+              data-parallax="scroll"
+              data-image-src="img/image-1.jpg"></div>
+            <div>
+              <h3 class="tm-text-secondary tm-mb-4">
+                Quisque at rutrum felis
+              </h3>
+              <p class="tm-mb-5">
+                Photo by CoWomen from Pexels. Morbi sollicitudin nibh eu
+                dignissim mollis. Etiam turpis tortor, ultricies sit amet
+                placerat suscipit, auctor eu diam.
+              </p>
+              <ul class="tm-list-plus">
+                <li>Vestibulum finibus consectetur nulla</li>
+                <li>Eget imperdiet eros interdum sit amet</li>
+                <li>Sed a lacinia lorem, sed luctus enim</li>
+                <li>2 small images has a parallax effect</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 tm-home-section-2-right">
+            <div
+              class="img-fluid tm-mb-4 tm-small-parallax"
+              data-parallax="scroll"
+              data-image-src="img/image-2.jpg"></div>
+            <div>
+              <h3 class="tm-text-secondary tm-mb-4">
+                Sed ultricies tortor vitae
+              </h3>
+              <p class="tm-section-2-text">
+                Photo by <strong>CoWomen</strong> from <strong>Pexels</strong>. Quisque tortor justo, pharetra in
+                eros sed, accumsan dapibus dolor. In luctus sed ante a
+                tristique.
+              </p>
+              <p>
+                You cannot re-distribute our template on your website for download. Ut ornare pulvinar lorem a elementum. Cras sollicitudin ante velit, eget facilisis sem viverra nex. Etiam quis mattis urna.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- row -->
 
-	<!-- bootsrtap CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+      <!-- Call to Action -->
+      <section class="row" id="tmCallToAction">
+        <div class="col-12 tm-page-cols-container tm-call-to-action-col">
+          <div class="tm-page-col-right">
+            <div class="tm-call-to-action-box">
+              <i class="fas fa-3x fa-rss-square tm-call-to-action-icon"></i>
+              <div class="tm-call-to-action-text">
+                <h3 class="tm-call-to-action-title">
+                  Vivamus sollicitudin tellus
+                </h3>
+                <p class="tm-call-to-action-description">
+                  Maecenas maximus tellus in dolor auctor tristique. Nam
+                  hendrerit posuere laoreet. Aliquam erat volutpat. Nulla eros
+                  est, imperdiet vel feugiat non, ullamcorper mattis nulla.
+                </p>
+                <form action="#" method="GET" class="tm-call-to-action-form">
+                  <input type="email" name="email" placeholder="Email" class="tm-email-input" required />
+                  <button type="submit" class="btn btn-primary">
+                    Subscribe
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Page footer -->
+      <footer class="row tm-page-footer">
+        <p class="col-12 tm-copyright-text mb-0">
+          Copyright &copy; 2019 Next Level Company... Designed by
+          <a href="https://fb.com/templatemo" rel="nofollow" class="tm-copyright-link">Template Mo</a>
+        </p>
+      </footer>
+    </div>
 
-	<title>My Ethereum Wallet</title>
-
-	<script>
-		$(document).ready(function () {
-			let DEBUG = 1;
-			
-  
-  
-			const web3 = new Web3('https://ropsten.infura.io/v3/3c52917848e945229c0d33d632b10490');
-			let Buffer = ethereumjs.Buffer.Buffer;
-			let version = web3.version;
-
-			if (DEBUG) {
-				console.log('starting...');
-				console.log("Ropsten Ethereum API version : ", version);
-				console.log("web3: ", web3);
-			}
-			
-			let qrcode = new QRCode(document.getElementById("qrcode"), {
-				width : 250,
-				height : 250
-			});
-			
-			
-			$('#coin').on('click', async function () {	
-				
-				let fromaddress = $("#fromaddress").val();
-				let toaddress = $("#toaddress").val();
-				let amount = $("#sendcoin").val();
-				let myPrivateKey = $("#passwd").val();
-				
-				const privateKey = Buffer.from(myPrivateKey, 'hex');
-				if (DEBUG) console.log("privateKey: ", privateKey);
-
-				web3.eth.getTransactionCount(fromaddress, (err, txCount) => {
-				// Build the transaction
-				const txObject = {
-				nonce: web3.utils.toHex(txCount),
-				to: toaddress,
-				value: web3.utils.toHex(web3.utils.toWei(amount, 'ether')),
-				gasLimit: web3.utils.toHex(21000),
-				gasPrice: web3.utils.toHex(web3.utils.toWei('10', 'gwei'))
-				 }
-
-				 // Sign the transaction
-				 const tx = new ethereumjs.Tx(txObject);
-				 tx.sign(privateKey);
-
-				 const serializedTx = tx.serialize()
-				 const raw = '0x' + serializedTx.toString('hex')
-
-				 // Broadcast the transaction
-				 web3.eth.sendSignedTransaction(raw, (err, txHash) => {
-				console.log('txHash:', txHash)
-				  // Now go check etherscan to see the transaction!
-				  })
-				})  // end of txbuilder
-			})
-			$('#getBalance').on('click', async function () {	
-	
-				
-				let fromaddress = $("#fromaddress").val();
-				
-				let getbalance = await web3.eth.getBalance(fromaddress);
-				let balance = web3.utils.fromWei(getbalance, "ether")
-
-				if (DEBUG) console.log("balance : ", balance + " ETH");
-				$('#message').text(" balance: " + balance + " ETH");
-			
-			})
-			
-			$('#newAccount').on('click', async function () {
-
-				let account = web3.eth.accounts.create();
-
-				if (DEBUG) console.log("privateKey : ", account.privateKey);
-				if (DEBUG) console.log("account : ", account.address);
-
-				$('psthworld').val(account.address);
-				$('#fromaddress').val(account.address);		
-				
-				let elText = document.getElementById("fromaddress");
-				qrcode.makeCode(elText.value);  
-				
-				$('#m').text(" account: " + account.address);
-				alert("Account 생성이 완료 되었습니다..!!!" + account.address);
-				
-				
-
-				// getting the value
-				// let fromaddress = $("#fromaddress").val();
-
-				// setting the value
-				// $("#fromaddress").val( "new value here" );
-
-				// <h5>송신처 <input id="fromaddress" size="45" placeholder=""></input> </h5>
-				// <h5>수신처 <input id="toaddress" size="45" value="0x09BCeaC0A761E13f4e4F1461F0fD43dA25791588" placeholder=""></input> </h5>
-			})
-		})
-	</script>
-</head>
-
-<body>
-	<br>
-	<br>
-	<div class="container " role="main">
-		<h2><strong> 전자지갑 만들기(수정) </strong></h2>
-		<div id="tablePlace"></div>
-		<button id="newAccount">new!!new!!new!!</button>
-		<button id="getBalance">잔액조회</button>
-		<button id="coin">전  송</button>
-		<h5>송신처 <input id="fromaddress" size="45" placeholder="" value="0x60d97e64E7bfa64843fE0BCAc536AafB4ACc6EB6"></input> </h5>
-		<h5>수신처 <input id="toaddress" size="45" placeholder=""></input> </h5>
-		<h5>코인 <input id="sendcoin" size="45" placeholder=""></input> </h5>
-		<h5>비밀번호 <input id="passwd" type = "password" size="45" placeholder="" value="ea85396ff5c38d04bbc7e34de8f443bae0c36debbb1a0a7ffcbe17c53b40f1b0"></input> </h5>
-	</div>
-	<br>
-	<br>
-	<div class="container " role="main">
-		<h4><strong> Message </strong></h4>
-		<div id="message"></div>
-		<div id="qrcode" style="width:250px; height:250px; margin-top:15px;"></div>
-	</div>
-	<hr>
-	<footer class="py-5 bg-dark">
-		<div class="container">
-			<p class="m-0 text-center text-white"><b>copyright ⓒ Sunstar, Since 2015 . All Rights Reserved. </b></p>
-		</div>
-	</footer>
-</body>
-
+    <script src="js/jquery.min.js"></script>
+    <script src="js/parallax.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
